force-app/main/default/objects/Sprout_Social_Persona__c/fields/Author_Labels__c.field-meta.xml
<CustomField>
    <fullName>Author_Labels__c</fullName>
    <label>Author Labels</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>