force-app/main/default/objects/Sprout_Social_Persona__c/fields/External_Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>External_Picture_URL__c</fullName>
    <label>External Picture URL</label>
    <type>Url</type>
</CustomField>