force-app/main/default/objects/Sprout_Social_Persona__c/fields/Followers__c.field-meta.xml
<CustomField>
    <fullName>Followers__c</fullName>
    <label>Followers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>