force-app/main/default/objects/Sprout_Social_Persona__c/fields/MediaProvider__c.field-meta.xml
<CustomField>
    <fullName>MediaProvider__c</fullName>
    <label>Media Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>