force-app/main/default/objects/Sprout_Social_Persona__c/fields/ParentContact__c.field-meta.xml
<CustomField>
    <fullName>ParentContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sprout Social Personas</relationshipLabel>
    <relationshipName>Sprout_Social_Personas</relationshipName>
    <type>Lookup</type>
</CustomField>