force-app/main/default/objects/Sprout_Social_Persona__c/fields/RealName__c.field-meta.xml
<CustomField>
    <fullName>RealName__c</fullName>
    <label>Real Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>