force-app/main/default/objects/Sprout_Social_Persona__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MediaProvider__c</columns>
    <columns>Provider__c</columns>
    <columns>ParentContact__c</columns>
    <columns>Followers__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>